// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should render correctly 1`] = `
<input
  className="jpmZcP"
  name="email"
  type="email"
/>
`;

exports[`Input should render correctly 2`] = `
<input
  className="jpmZcP"
  name="password"
  type="password"
/>
`;
